<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTitulo"
            android:textSize="@dimen/sizeTitulo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/editNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingreseNombre"/>


        <!-- Botones Toast -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtToast"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btnSaludarToast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSaludarToast"/>

        </LinearLayout>


        <!-- Botones SnackBar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSnackbar"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btnSnackBarDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSnackBarDefault"/>

            <Button
                android:id="@+id/btnSnackBarAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSnackBarAction"/>

            <Button
                android:id="@+id/btnSnackBarCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSnackBarCustom"/>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
